# ai-agent-experiment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
conf/: web-client-nginx.conf
docs/: architecture.md  latency-budget.md  voice-events.md  voice-policy-layer.md
docs/replay-fixtures/: README.md  multilingual_replay_trace.json
evals/: __init__.py  common.py
evals/multilingual/: __init__.py  matrix.json  run_multilingual_evals.py
evals/voice_policy/: README.md  __init__.py  run_voice_policy_evals.py
freeswitch/: Dockerfile  freeswitch-entrypoint.sh
freeswitch/conf/: README.md  modules.conf  vars.xml
kamailio/: Dockerfile  README.md  kamailio-entrypoint.sh  kamailio.cfg
kamailio/config/: modules-load.cfg  modules-params.cfg  routes-dialog-media.cfg  routes-outbound.cfg  routes-registration.cfg  routes-request-helpers.cfg  routes-webrtc.cfg
rtpengine/: Dockerfile  rtpengine-debug.sh  rtpengine-entrypoint.sh  rtpengine.conf
scripts/: setup-env.sh  webrtc_smoke.py
services/: Dockerfile  __init__.py
services/common/: __init__.py  audio.py  config.py  freeswitch.py  freeswitch_commands.py
services/llm_service/: __init__.py  main.py  mock_weather.py
services/stt_service/: __init__.py  main.py
services/tts_service/: __init__.py  freeswitch.py  main.py
tests/: README.md  __init__.py  conftest.py
voice_policy/: __init__.py  heuristic_semantic_interpreter.py  policy.py  schema.py  semantic_interpreter.py  trace_adapter.py
web_client/: README.md  index.html
(+75 files in other folders)
