[project]
name = "voice-ai-telecom-demo"
version = "0.1.0"
description = "Local SIP/WebRTC voice AI demo with STT, LLM, TTS, policy, and observability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0",
    "genesis==0.8.0",
    "httpx>=0.28.1",
    "openai>=2.10.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "__pycache__"]
